# numbat_software

./: .gitignore  .gitmodules  .travis.yml  README.md  cameras.launch  huskyDeps.rosinstall  nuk.launch  owr_software.kdev4  pcLaunch.launch  ping_ssh.sh  python_rec_udp.py~  rover.tar  roverLaunch.launch  rover_build.sh  setup.sh  setup.sh~  socket  tags
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.kdev4/: owr_software.kdev4
Documentation/: GUIDesign.dia  RoverComs.dia  RoverComs.dia.orig  nodes.dia  nodes.dia.autosave  softwareStack.dia
Netbeans-Rovers/nbproject/: configurations.xml  project.xml
control/: base.urdf.xacro~  log.kml
control/src/agvc_gps/: mainpage.dox  setup.py  setup.py~
control/src/agvc_sensors/: mainpage.dox
control/src/mapping/: CMakeLists.txt  package.xml
control/src/owr_gps_logging/: package.xml
control/src/owr_gui/: settings.gradle
gps/devel/: .catkin  .rosinstall  setup.sh
gps/src/agvc_gps/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  package.xml  package.xml~
gps/src/agvc_gps/include/agvc_gps/: agvc_gps_origin_node.h
gps/src/agvc_gps/launch/: agvc_gps_tcp.launch~
gps/src/agvc_gps/scripts/: nmea_gps_driver.py
gps/src/agvc_gps/src/: agvc_gps_2d_node.cpp  agvc_gps_diagnostics_node.cpp  agvc_gps_diagnostics_node.cpp~  agvc_gps_origin_node.cpp  tcp_nmea_gps_driver.py
gps/src/agvc_gps/src/agvc_gps/srv/: _ConvertGPSOrigin.py  __init__.py
gps/src/agvc_gps/srv/: ConvertGPSOrigin.srv
gps/src/agvc_gps/srv_gen/cpp/include/agvc_gps/: ConvertGPSOrigin.h
gps/src/agvc_gps/srv_gen/lisp/: ConvertGPSOrigin.lisp  _package.lisp  _package_ConvertGPSOrigin.lisp  agvc_gps-srv.asd
gps/src/agvc_sensors/: CMakeLists.txt~
gps/src/owr_gps_logging/: CMakeLists.txt  CMakeLists.txt~
gps/src/owr_gui/: CMakeLists.txt  CMakeLists.txt~  build.gradle  package.xml  package.xml~  settings.gradle~
gps/src/owr_rqt_gps_visuliser/: CMakeLists.txt  package.xml~  plugin.xml  plugin.xml~
gui/: .gitignore  control.launch  fltkgui.cpp  joysticks.launch  joysticks.launch.orig  snapimage
gui/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
gui/netbeans-OWR_GUI/nbproject/: configurations.xml  project.xml
gui/src/: owr_camera_control  owr_messages  python_rec_udp.py  src.kdev4
gui/src/.kdev4/: src.kdev4
gui/src/bluesat_owr_protobuf/: CMakeLists.txt  CMakeLists.txt~  package.xml
gui/src/gps_test_app/: CMakeLists.txt  package.xml
gui/src/owr_drive_controls/: CMakeLists.txt  package.xml
gui/src/owr_gui/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
gui/src/owr_wifi_data/: CMakeLists.txt  package.xml  wifi.launch
gui/src/testDataGenerator/: CMakeLists.txt  package.xml
gui/start/: init-script.sh  procmon.conf  procmon.py  start_gui.sh  startup  tmuxprocmon
gui/start/speech/: mooi.sh
gui/system/: 80-agvc.rules  80-blue-ground.rules  autoConnect.sh  kcn
husky_control/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
launch/: roverDrive.launch
newFeatureSpace/: 2ndPart.txt
nmea/devel/: .catkin  .rosinstall  setup.sh
protobuf/src/bluesat_owr_protobuf/: CMakeLists.txt  CMakeLists.txt~  package.xml~
rover/: auto_nav.launch  auto_only.launch  cameras.launch  joysticks.launch  nuk.launch  rover.kdev4  usb_reset  usbreset  usbreset.c  usbreset.py
rover/.kdev4/: rover.kdev4
rover/Netbeans-Rovers/nbproject/: configurations.xml
rover/calibration_files/: ar_camera_1.yaml  ar_camera_2.yaml  ar_camera_3.yaml
rover/scripts/: activiate_feeds.py  activiate_feeds.py~
rover/src/.kdev4/: src.kdev4
rover/src/Bogey/: CMakeLists.txt  manifest.xml  package.xml
rover/src/ForHarryForROSVersA/: CMakeLists.txt  manifest.xml  package.xml
rover/src/RightBogey/: CMakeLists.txt  package.xml
rover/src/ThinWheelHub/: CMakeLists.txt  manifest.xml  package.xml
rover/src/VersionABogey/: CMakeLists.txt  manifest.xml  package.xml
rover/src/VersionAWheelsAndHousings/: CMakeLists.txt  manifest.xml  package.xml
rover/src/WideWheelHub/: CMakeLists.txt  manifest.xml  package.xml
rover/src/agvc_utils/: CMakeLists.txt.orig
rover/src/buttercup_node/: CMakeLists.txt  package.xml
rover/src/meshes/: arm_fibbia.STL  arm_lower.STL  arm_tibbia.STL  arm_triangle.STL  base_link.STL  bottom_actuator_shaft.STL  claw_base.STL  end_plate.STL  linear_base_top.STL  linear_bottom.STL  rocker.STL  (+9 more)
rover/src/owr_numbat_tf/: CMakeLists.txt  package.xml
rover/src/owr_numbat_tf/config/: joint_names_Assembly.SLDASM.yaml
rover/src/owr_numbat_tf/launch/: display.launch  gazebo.launch  joint_guess.launch  tf.launch
rover/src/owr_numbat_tf/meshes/: Back Left Axle.STL  Back Left Wheel.STL  Back Right Axle.STL  Back Right Wheel.STL  Front Left Axle.STL  Front Left wheel.STL  Front RIght Wheel.STL  Front Right Axle.STL  base_link.STL  laser_tilt_tilt.STL
rover/src/owr_numbat_tf/robots/: owr_numbat_tf.urdf
rover/src/owr_numbat_tf/scripts/: publish_joint_guess.py
rover/src/owr_numbat_tf/urdf/: Assembly.SLDASM.urdf
rover/start/: .procmon.conf.swp  example_procman.conf  nohup.out  procmon.conf  procmon.py  start_can.sh  startup  tmuxprocmon
rover/system/: 80-blue.rules  80-blue_BACKUP_11600.rules  80-blue_BASE_11600.rules  80-blue_REMOTE_11600.rules  apc  g12-nuc.bash
rover_arduino/clifford/: clifford.ino
rover_arduino/magsensor/: magsensor.ino
rover_arduino/shadow/: shadow.ino
scripts/: get_ros_deps.sh  start_onboard.sh  travis_script.sh
servo_control/devel/: .catkin  .rosinstall  setup.sh
servo_control/install/: setup.sh
src/: src.kdev4
src/agvc_utils/: package.xml
src/numbat_temp_comms/: CMakeLists.txt
src/owr_bluetounge2_tf/: CMakeLists.txt
src/owr_camera_control/: CMakeLists.txt
src/owr_clinometer_vision/: package.xml
src/owr_positioning/: CMakeLists.txt  README.md  package.xml
src/owr_webuibridge/: package.xml
start/: serverprocmon.py
start/speech/: bee.sh  general.sh  horse.sh  oink.sh
system/: 80-blue.rules  80-opticalflow.rules  local.bash
udrf/src/HalfClawV3/: CMakeLists.txt  package.xml
udrf/src/HalfClawV3/meshes/: HalfClawV3.STL
udrf/src/HalfClawV3/robots/: HalfClawV3.SLDPRT.URDF
(+828 files in other folders)
